boom/measurements/verilator-mega-O3/compile-time-run-7.txt
START: Current timestamp in milliseconds: 1731323134315
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.sv':

             29.98 msec task-clock:u                     #    0.986 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,892      page-faults:u                    #   96.458 K/sec                     
         6,930,419      cycles:u                         #    0.231 GHz                         (9.92%)
         8,651,209      stalled-cycles-frontend:u        #  124.83% frontend cycles idle        (12.17%)
       207,304,264      instructions:u                   #   29.91  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (22.18%)
        43,254,270      branches:u                       #    1.443 G/sec                       (32.18%)
           673,826      branch-misses:u                  #    1.56% of all branches             (42.19%)
        86,029,883      L1-dcache-loads:u                #    2.869 G/sec                       (50.06%)
         9,088,095      L1-dcache-load-misses:u          #   10.56% of all L1-dcache accesses   (50.03%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,195,503      L1-icache-loads:u                #   39.874 M/sec                       (50.03%)
             9,272      L1-icache-load-misses:u          #    0.78% of all L1-icache accesses   (50.03%)
           108,300      dTLB-loads:u                     #    3.612 M/sec                       (50.06%)
            29,948      dTLB-load-misses:u               #   27.65% of all dTLB cache accesses  (47.77%)
               349      iTLB-loads:u                     #   11.640 K/sec                       (37.80%)
             1,399      iTLB-load-misses:u               #  400.86% of all iTLB cache accesses  (27.79%)
           947,617      L1-dcache-prefetches:u           #   31.606 M/sec                       (17.79%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.030401842 seconds time elapsed

       0.013465000 seconds user
       0.016831000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-7/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-7//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             63.92 msec task-clock:u                     #    1.624 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,234      page-faults:u                    #   66.244 K/sec                     
       131,007,301      cycles:u                         #    2.050 GHz                         (57.79%)
        16,869,117      stalled-cycles-frontend:u        #   12.88% frontend cycles idle        (52.81%)
       162,044,407      instructions:u                   #    1.24  insn per cycle            
                                                  #    0.10  stalled cycles per insn     (28.75%)
        76,421,715      branches:u                       #    1.196 G/sec                       (18.43%)
         1,749,740      branch-misses:u                  #    2.29% of all branches             (42.34%)
       101,559,985      L1-dcache-loads:u                #    1.589 G/sec                       (48.15%)
         2,195,786      L1-dcache-load-misses:u          #    2.16% of all L1-dcache accesses   (48.14%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        27,396,001      L1-icache-loads:u                #  428.628 M/sec                       (48.18%)
           441,791      L1-icache-load-misses:u          #    1.61% of all L1-icache accesses   (48.18%)
           569,493      dTLB-loads:u                     #    8.910 M/sec                       (48.21%)
            21,369      dTLB-load-misses:u               #    3.75% of all dTLB cache accesses  (52.93%)
           485,764      iTLB-loads:u                     #    7.600 M/sec                       (63.85%)
            12,963      iTLB-load-misses:u               #    2.67% of all iTLB cache accesses  (65.31%)
           688,952      L1-dcache-prefetches:u           #   10.779 M/sec                       (60.61%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.039366103 seconds time elapsed

       0.028815000 seconds user
       0.033890000 seconds sys


GROUP: verilator SUBGROUP: clang
